--- a/kapitel/01_Problemstellung.tex
+++ b/kapitel/01_Problemstellung.tex
@@ -1,4 +1,4 @@
-Bereits seit mehreren Jahrzehnten werden die Faktoren, welche den Erfolg von IS-\-Pro\-jek\-ten positiv beeinflussen, untersucht.\todo{zitat evtl weg}\footnote{fortune white 2006}
+Bereits seit mehreren Jahrzehnten werden die Faktoren, welche den Erfolg von IS-\-Pro\-jek\-ten positiv beeinflussen, untersucht.\footnote{Vgl. \cite{Fortune.2006}, S. 53.}
 %So untersuchte Daniel\footnote{\cite{Daniel.1961}} bereits 1961 den Einfluss von Erfolgsfaktoren\todo{\ldots}
 %Dabei wurden unterschiedliche Arten gefunden, diese \ac{EF} in Gruppen einzuordnen und somit zu klassifizieren.
 %Daraus ergibt sich ein theoretisches Erkenntnissdefizit, da es keine einheitliche, anerkannte Liste von \ac{EF} gibt.\footnote{Vgl. \cite{vanScoter.2011}, S.6.} 
@@ -9,7 +9,7 @@ Bereits seit mehreren Jahrzehnten werden die Faktoren, welche den Erfolg von IS-
 %Der Mehrwert einer solchen Zusammenfassung besteht in der Möglichkeit, die Ergebnisse einer retrospektiven Analyse und die Gründe des Projekterfolgs leichter einzuordnen.
 Durch das größer werdende Interesse an ebenjenen Faktoren, die den Erfolg eines (IS-)Projektes maßgeblich 
 beeinflussen können, wurden im Laufe der Jahre zahlreiche Arten gefunden, Erfolgsfaktoren in Gruppen einzuordnen und folglich 
-zu klassifizieren. %Dies führte dazu, dass es bis heute keine allgemeingültige Klassifizierungsart von Erfolgsfaktoren gibt.
+zu klassifizieren.\footnote{Vgl. \cite{Fortune.2006}, S. 54.} %Dies führte dazu, dass es bis heute keine allgemeingültige Klassifizierungsart von Erfolgsfaktoren gibt.
 Diese Vielzahl an Klassifizierungsarten birgt jedoch das Risiko, dass den Verantwortlichen 
 eines Projektes die für dieses Projekt spezifischen Erfolgsfaktoren unbekannt sind, 
 oder sie den Faktoren keine angemessene Gewichtung zuordnen 
@@ -31,7 +31,7 @@ retrospektiven Analyse und die Gründe des Projekterfolges übersichtlich einzuo
 \textit{Welche unterschiedlichen Klassifizierungsarten von Erfolgsfaktoren von IS-Projekten werden in der Fachliteratur aufgezeigt und wie werden die Ansätze begründet?}\\
 Hieraus definiert sich das Forschungsproblem:
 Die weitere Forschung im Bereich der Erfolgsfaktorenklassifizierung gestaltet sich schwierig, da
-verschiedene, uneinheitliche Ansätze der Klassifizierung von Erfolgsfaktoren existieren und es darüber hinaus keine Übersicht über die bereits \todo{Nomen, vorhandenen klein} Vorhandenen gibt.
+verschiedene, uneinheitliche Ansätze der Klassifizierung von Erfolgsfaktoren existieren und es darüber hinaus keine Übersicht über die bereits vorhandenen Faktoren gibt.
 Ein systematisches Literraturreview kann dazu beitragen, die bereits bestehenden Klassifizierungen zu extrahieren 
 und eventuell Defizite oder Forschungslücken aufzeigen.
 Eine aus diesem Review resultierende Übersicht über die in der Fachliteratur aufgeführten \KAS von 
