--- a/kapitel/Acronyms.tex
+++ b/kapitel/Acronyms.tex
@@ -3,11 +3,12 @@
 	\acro{BSC}{Balanced Scorecard}
 	\acro{EF}{Erfolgsfaktor}
 	\acro{ERP}{Enterprise-Resource-Planning (Unternehmensressourcenplanung)}
-	\acro{FIS}{Führungsunterstützungssystem}
+	\acro{FIS}{Führungsinformationssystem}
 	\acro{FSM}{Formal Systems Model}
 	\acro{IS}{Informationssystem}
  	\acro{IT}{Informationstechnologie}
  	\acro{KA}{Klassifizierungsart}
  	\acro{MIS}{Management-Informationssystem}
+ 	\acro{MIT}{Massachusetts Institute of Technology}
  	\acro{MUS}{Management-Unterstützungs-System} 	
 \end{acronym}
