--- a/kapitel/Definition_Erfolgsfaktor.tex
+++ b/kapitel/Definition_Erfolgsfaktor.tex
@@ -2,4 +2,4 @@ Erfolgsfaktoren im Allgemeinen sind eine limitierte Anzahl von Faktoren, deren z
 wettbewerbsfähige Leistung für einzelne Bereiche oder das ganze Unternehmen sicherstellen.\footnote{Vgl. \cite{Bullen.1981} S.7.}
 Bezogen auf Projekte sind dies Schlüsselfaktoren, die den Erfolg des Projektes fördern,\footnote{Vgl. \cite{Buschermohle.2010} zitiert nach \cite{Basten.2012}.} wie
 z.B. Führungskompetenz und Erfahrung des Projektleiters, Kommunikation im Team oder Unterstützung des Managements.\\
-Oft wird auch von kritischen Erfolgsfaktoren gesprochen, wobei es für diesen Begriff keine allgemein anerkannte Definition gibt.\footnote{Vlg. \cite{Basten.2012}, S. 59.}
+Oft wird auch von \textit{kritischen Erfolgsfaktoren} gesprochen, wobei es für diesen Begriff keine allgemein anerkannte Definition gibt.\footnote{Vlg. \cite{Basten.2012}, S. 59.}
