--- a/kapitel/Fazit.tex
+++ b/kapitel/Fazit.tex
@@ -1,6 +1,5 @@
-Aufgrund von einer relativ kurzen Bearbeitungszeit von nur 7 Wochen mussten einige beschränkungen zugelassen werden.
-Zum Beispiel musste die ursprüngliche Anzahl von XX Suchdatenbanken nach einer überwältigenden Trefferzahl von über 500
-reduziert werden. Dabei fielen Datenbanken heraus wie XXX und XXX.
-
+Im Zuge dieser Bachelorarbeit wurde ein wissenschaftlicher Literaturreview durchgeführt, um herauszufinden, welche verschiedenen Arten der Klassifizierung von Erfolgsfaktoren in \ISPS in der Literatur vorhandenen sind. Aufgrund einer relativ kurzen Bearbeitungszeit von sieben Wochen mussten einige Beschränkungen zugelassen werden.
+Zum Beispiel konnten nur 5 wichtige akademische Datenbanken durchsucht werden, da schon dort, mit der in der in Kapitel 1.4 beschriebenen Vorgehensweise, weit mehr als XXX Suchergebnisse gefunden wurden.
 So konnte nicht bei allen Klassifizierungsarten auf die einzelnen Erfolgsfaktoren in den jeweiligen Gruppen eingegangen werden, da
 dies den umfang dieser Arbeit überschritten hätte. In der Übersicht jedoch wurde versucht, möglichst alle relevanten Informationen darzustellen.
+Ein möglicher Kritikpunkt an dieser Arbeit ist, dass nicht jede Klassifizierungsart und deren Herleitung in außreichender Detailliertheit dargestellt werden konnte. Es wurde jedoch versucht, in einem möglichst breiten Umfang eine Übersicht über die vorhandenen Arten aufzustellen um einen Ausblick auf die weitere Forschung zu erleichtern.
