--- a/kapitel/arten/chow_cao2008.tex
+++ b/kapitel/arten/chow_cao2008.tex
@@ -1,7 +1,7 @@
 \noindent
 \subsubsection{Klassifizierung nach Chow und Cao (2008)}
 \textit{Vorgehehen:}\\\noindent
-Die Klassifizierung von Chow und Cao bezieht sich hauptsächlich auf agile Softwareprojekte.\footnote{Vgl. \cite{Chow.2008}, S. 961.}
+Chow und Chao behandeln in ihrer Studie die Erfolgsfaktoren von agilen Softwareprojekten.\footnote{Vgl. \cite{Chow.2008}, S. 961.}
 In ihrer Studie zeigen sie fünf Dimensionen auf, in die sich die Faktoren einordnen lassen:\footnote{Vgl. zu dieser Liste \cite{Chow.2008}, S. 964.}
 \begin{itemize}\itemsep0pt
 \item[-]Unternnehmen,
@@ -10,6 +10,6 @@ In ihrer Studie zeigen sie fünf Dimensionen auf, in die sich die Faktoren einor
 \item[-]Technik,
 \item[-]Projekt.
 \end{itemize}
-Für diese Faktorgruppe liefern sie insgesamt 12 Erfolgsfaktoren, die ihrer meinung nach die
+Für diese Faktorgruppe liefern sie insgesamt 12 Erfolgsfaktoren, die ihrer Meinung nach die vier Erfolgsdimensionen der agilen Softwareentwicklung \textit{Qualität}, \textit{Zeit}, \textit{Kosten} und \textit{Umfang} beeinflussen.\footnote{Vgl. \cite{Chow.2008}, S. 964.}
 \\\noindent
 \textit{Begründung:}\\\noindent
