--- a/kapitel/arten/daniel1961.tex
+++ b/kapitel/arten/daniel1961.tex
@@ -1,25 +1,53 @@
 \noindent
 \subsubsection{Klassifizierung nach Daniel (1961)}
 \textit{Vorgehehen:}\\\noindent
-???Daniel liefert keine Klassifizierung von Erfolgsfaktoren, da es den Begriff zu diesem Zeitpunkt noch gar nicht gibt???
-Daniel ist einer der Ersten, der überhaupt von Erfolgsfaktoren im Bezug auf Informationssysteme spricht.\footnote{Vgl. \cite{Daniel.1961}, S. 116.}
-Er unterteilt diese dabei in die folgenden zwei Kategorien:\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 113, 114, 117.}
+Daniel erwähnt als einer der Ersten überhaupt den Begriff Erfolgsfaktor generell, aber auch im Zusammenhang mit Informationssystemen.\footnote{Vgl. \cite{Daniel.1961}, S. 116 sowie \cite{Fortune.2006}, S. 53 und \cite{Rockart.1979}, S. 85.}
+Ihm zufolge gibt es in den meisten Branchen drei bis sechs Faktoren, denen besondere Aufmerksamkeit geschenkt werden muss,
+um eine Unternehmung positiv zu beeinflussen, da sie den Erfolg maßgeblich bedingen.\footnote{Vgl. \cite{Daniel.1961}, S. 116.}
+Prinzipiell beabsichtigt Daniel mit seinem Artikel in erster Linie, die Relevanz eines eigenständigen Informationssystems 
+herauszustellen.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Daniel.1961}, S. 113.}
+Seiner Ansicht nach liegt der Schlüssel zu einem dynamischen und nützlichen System in zwei entscheidenden Elementen des Managementprozesses:
 \begin{itemize}\itemsep0pt
-\item[-]Planung,
-\item[-]Kontrolle.
+\item[-]Planung und
+\item[-]Kontrolle,\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 113, 114, 117.}
 \end{itemize}
-Planung definiert Daniel hier als Zielsetzung, Strategieformulierung und Entscheidungsfindung zwischen alternativen
-Anlagen oder Handlungsoptionen.\footnote{Vgl. \cite{Daniel.1961}, S. 113.}
-Innerhalb der Gruppe Planung unterteilt er auf einer weiteren Ebene:\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 113-116.}
+wobei Daniel primär auf den Aspekt der \textit{Planung} fokussiert.\footnote{Vgl. zu diesem Teilsatz \cite{Daniel.1961}, S. 113.} 
+\textit{Planung} definiert er im Folgenden als Zielsetzung, Strategieformulierung und Entscheidungsfindung zwischen alternativen
+Anlagen oder Handlungsoptionen,\footnote{Vgl. zu diesem Teilsatz \cite{Daniel.1961}, S. 113.} während er \textit{Kontrolle} nicht gesondert definiert. 
+Die Abgrenzung von Planungsinformationen und Kontrolldaten stellt Daniel anhand von vier Charakteristika heraus:\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 117, 119.}
 \begin{itemize}\itemsep0pt
-\item[-]Umweltinformationen, wie soziale, politische oder ökonomische Aspekte,
-\item[-]Wettbewerbsdaten, wie vergangene Wertentwicklung oder Programme und Pläne der Wettbewerber,
-\item[-]{interne Daten, wie Stärken und Schwächen des eigenen Unternehmens.}
+\item[1.]Erfassungsbereich -- Informationen zur \textit{Planung} sind, laut Daniel, nicht nach Funktionen gegliedert.\footnote{Vgl. zu diesem Listenpunkt \cite{Daniel.1961}, S. 117.} Tatsächlich sollen sie die Abgrenzung nach 
+innerbetrieblichen Abteilungen überwinden und so eine Basis für ganzheitliche Pläne bieten. Konträr dazu wird sich bei der Erhebung 
+von \textit{Kontrolldaten} stark an Unternehmensstrukturen orientiert, sodass diese Daten zur Leistungskontrolle von einzelnen Abteilungen genutzt werden können.
+\item[2.]Betrachteter Zeitraum -- Informationen zur \textit{Planung} decken relativ lange Zeiträume ab und beschäftigen sich mit langfristigen Trends.\footnote{Vgl. zu diesem Listenpunkt \cite{Daniel.1961}, S. 117, 119.} 
+Daten bezüglich der \textit{Kontrolle} hingegen werden regelmäßig erhoben und verarbeitet und betreffen somit ebenso kürzere Perioden.
+\item[3.]Detailliertheitsgrad -- \textit{Planungsinformationen} sind auf wenig detaillierte Kurzdarstellungen von Sachverhalten beschränkt, während bei
+\textit{Kontrolldaten} Präzision und minutiöse Darstellungen von Sitautionen eine große Rolle spielen. \footnote{Vgl. zu diesem und dem nächsten Listenpunkt \cite{Daniel.1961}, S. 119.}
+\item[4.]Ausrichtung -- Informationen bezüglich der \textit{Planung} sollen Ausblicke auf die zukünftig zu erwartenden Enwtwicklungen bieten, während 
+\textit{Kontrolldaten} vergangene Ergebnisse darstellen und Ursachen für diese aufzeigen. 
 \end{itemize}
-Auf Seiten der Kontrollfaktoren gruppiert er noch in finanzielle und nicht-finanzielle Daten.\todo{mehr}
+\noindent
+Insgesamt nimmt Daniel seine Klassifizierung von \EF in drei Ebenen vor, wobei die beiden Kategorien Planung und Kontrolle die 
+erste Ebene und gröbste Kategorisierung darstellen.\footnote{Vgl. zu diesem Satz \cite{Daniel.1961}, Grafik auf Seite S. 114.} 
+Auf der nächsten Ebene unterteilt er den Abschnitt \textit{Planung} in drei Unterebenen:\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 113-116.}
+\begin{itemize}\itemsep0pt
+\item[-]Umweltinformationen, sie beschreiben soziale, politische oder ökonomische Aspekte,
+\item[-]Wettbewerbsinformationen, die die bisherige Wertentwicklung, Programme und Pläne der Wettbewerber erläutern,
+\item[-]{interne Informationen, die auf Stärken und Schwächen des eigenen Unternehmens hinweisen.}
+\end{itemize}
+Diesen Unterkategorien ordnet er schließlich die eigentlichen \EF zu.
+\\\noindent
+Auf Seiten der \textit{Kontrolldaten} differenziert er zusätzlich nach Art der gelieferten Daten in zwei Unterkategorien:\footnote{Vgl. zu dieser Auflistung \cite{Daniel.1961}, S. 114.} 
+\begin{itemize}\itemsep0pt
+\item[-]finanzielle Daten,
+\item[-]nicht-finanzielle Daten,
+\end{itemize}
+wobei sich innerhalb dieser Gruppen die Erfolgsfaktoren nominell entsprechen.\footnote{Vgl. \cite{Daniel.1961}, S. 114.} 
+Für diese Konvergenz liefert Daniel keine explizite Erklärung, stellt sie aber als Besonderheit heraus.\footnote{Vgl. \cite{Daniel.1961}, S. 120.}
 \\\noindent
 \textit{Begründung:}\\\noindent
-Daniel liefert keine gesonderte Begründung für seinen Ansatz. Er ist jedoch einer der Ersten, der von Erfolgsfaktoren im Bezug auf 
-Informationssysteme spricht.
-Daniel argumentiert, dass das Problem der hohen Anzahl von scheiternden Projekten in der Lücke zwischen statischen \todo{besser}Informationssystemen(Buchführungssystemen) und
-sich wandelnden Unternehmensstrukturen liegt.\footnote{Vgl. \cite{Daniel.1961}, S. 111.}
+Daniel liefert keine gesonderte Begründung für seinen Ansatz. Er argumentiert jedoch, dass das Problem der hohen Anzahl von scheiternden 
+Projekten in der Lücke zwischen statischen Informationssystemen und sich wandelnden Unternehmensstrukturen liegt.\footnote{Vgl. \cite{Daniel.1961}, S. 111.} 
+Insbesondere weist er darauf hin, dass die bessere Handhabung von Daten zu einem Ersatz für das aufwendige Umstrukturieren von Positionen werden könnte.\footnote{Vgl. \cite{Daniel.1961}, S. 121.} 
+Als Lösungsansatz hierfür schlägt er nachdrücklich die Implementierung oder Verbesserung eines entsprechenden Informationssystems vor, das den Aspekt der Planung 
+ausdrücklich berücksichtigt.\footnote{Vgl. \cite{Daniel.1961}, S. 120.}
