--- a/kapitel/arten/gorla1998.tex
+++ b/kapitel/arten/gorla1998.tex
@@ -2,10 +2,13 @@
 \subsubsection{Klassifizierung nach Gorla und Lin (1998)}
 \textit{Vorgehen:}\\\noindent
 Gorla und Lin nehmen Bezug auf den Erfolg von Management-Informationssystemen (\acs{MIS}).\footnote{Vgl. \cite{Gorla.1998}, S. 728.}
-Ihrer Ansicht nach beeinflussen Faktoren folgender Gruppen den Erfolg von \ac{MIS}.\\footnote{Vgl. zu dieser Liste \cite{Gorla.1998}, S. 728-729.}
+Ihrer Ansicht nach beeinflussen Faktoren folgender Gruppen den Erfolg von \ac{MIS}.\footnote{Vgl. zu dieser Liste \cite{Gorla.1998}, S. 728-729.}
 \begin{itemize}\itemsep0pt
 \item[-]Faktoren bezüglich der Organisation,
 \item[-]technische Faktoren,
 \item[-]individuelle Faktoren.
 \end{itemize}
 \textit{Begründung:}\\\noindent
+Gorla und Lin führen an, dass mit ihrem Modell der Erfolgs von MIS-Projekten vorhergesagt werden kann.\footnote{Vgl. zu diesem Satz und dem Rest des Absatzes \cite{Gorla.1998}, S. 729.}
+Ihr Ansatz definiere, im Gegensatz zu früheren Studien, den Erfolg von MIS-Projekten empirisch durch die Nutzung von Pseudo-Variablen.
+Dadurch, dass sie sowohl technische als auch organisatirische Faktoren betrachten, sei ihr Modell umfassender als Bisherige.
