--- a/kapitel/arten/hyväri2006.tex
+++ b/kapitel/arten/hyväri2006.tex
@@ -2,19 +2,27 @@
 \subsubsection{Klassifizierung nach Hyväri (2006)}
 \textit{Vorgehehen:}\\\noindent
 Zweck der Studie von Hyväri war es, Erfolgsfaktoren des Projektmanagements 
-auszuwerten sowie Beziehungen zwischen diesen und organisatorischen Variablen zu prüfen.\footnote{Vgl. \cite{Hyvari.2006}, S. 31.}
+auszuwerten.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Hyvari.2006}, S. 31.} Zusätzlich wollten sie prüfen, in welcher Beziehung die \EF und organisatorischen Variablen stehen.
 Die hierzu aufgezeigte Klassifizierung von Erfolgsfaktoren untergliedert in fünf Faktorgruppen:\footnote{Vgl. zu dieser Liste \cite{Hyvari.2006}, S. 36.}
 \begin{itemize}\itemsep0pt
-\item[-]Faktoren bezogen auf das Projekt.
-\item[-]Faktoren bzgl. des Projektmanagements.
-\item[-]Faktoren bzgl. Projektteams.
-\item[-]Faktoren bzgl. des Unternehmens.
+\item[-]Faktoren bzgl. des Projekts,
+\item[-]Faktoren bzgl. des Projektmanagements,
+\item[-]Faktoren bzgl. Projektteams,
+\item[-]Faktoren bzgl. des Unternehmens,
 \item[-]Faktoren bzgl. der Rahmenbedingungen.
 \end{itemize}
 Diese Kategorisierung ist weitgehend kongruent zu dem von Belassi und Tukel\footnote{\cite{Belassi.1996}} gelieferten Schema. Hyväri unterteilt
-jedoch die Gruppe \textit{Projektmanagement und Projektteam} von Belassi und Tukel in die zwei eigenständigen 
-Gruppen \textit{Projektmanagement} und \textit{Projektteam}\footnote{Vgl. \cite{Hyvari.2006}, S. 33.}\\
+jedoch die Gruppe \textit{Projektmanagement und Projektteam}, die von Belassi und Tukel als zusammenhängende Gruppe gesehen wird, in die zwei eigenständigen 
+Klassen \textit{Projektmanagement} und \textit{Projektteam}.\footnote{Vgl. \cite{Hyvari.2006}, S. 33.}
+Des Weiteren liefert Hyväri zu den einzelnen Gruppen jeweils drei Erfolgsfaktoren, die sie in ihrer Studie herausgearbeitet hat. Zu den projektbezogenen Faktoren 
+zählen \textit{klare Ziele und Zielvorstellungen}, \textit{Engagement des Endbenutzers} und \textit{ausreichende Mittel und Ressourcen}.\footnote{Vgl. \cite{Hyvari.2006}, S. 34.}
+Faktoren, welche sich auf das Projektmanagement beziehen, sind \textit{Engagement}, die \textit{Fähigkeit zur Kommunikation} sowie \textit{effektive Führung}.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Hyvari.2006}, S. 35.}
+Zum Projektteam zählen die Faktoren wie \textit{Kommunikation}, \textit{Engagement} und \textit{technischer Hintergrund}.
+Bezüglich des Unternehmens arbeitet Hyväri als wichtigsten Faktor die \textit{Unterstützung des Top-Managements} heraus.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Hyvari.2006}, S. 35-36.} Weitere Faktoren in dieser Gruppe sind \textit{klare Organisations- und Stellenbeschreibungen} sowie eine klare \textit{Projekt-Organisationsstruktur}.
+Zur letzten Gruppe, den Rahmenbedingungen, zählt Hyvari den \textit{Kunden}, die \textit{technologische Umwelt} und die \textit{wirtschaftliche Umwelt}.\footnote{Vgl. \cite{Hyvari.2006}, S. 36.}
+\\
 \noindent\textit{Begründung:}\\\noindent
+\todo{Begründung}
 %Hyväri geht jedoch nicht auf selbst definierte EF ein, sondern bezieht diese aus den Ergebnissen eines Literaturreviews 
 %und kategorisiert sie anschließend in die genannten Faktorgruppen. 
 %Größtenteils bezieht sich Hyväri bei diesem Literaturreview auf die Studie von Belassi und Tukel und sich selbst. 
