--- a/kapitel/arten/ngai2008.tex
+++ b/kapitel/arten/ngai2008.tex
@@ -1,10 +1,14 @@
 \noindent
 \subsubsection{Klassifizierung nach Ngai, Law und Wat (2008)}
 \textit{Vorgehen:}\\\noindent
-Bezug auf Implementation von ERP Systemen
+Ziel der Studie von Ngau, Law und Wat war es unter Anderem, die Erfolgsfaktoren bei der Implementierung von ERP-Systemen zu identifizieren, sowie die gefundenen Erfolgsfaktoren und Leistungen der ERPs in verschiedenen Ländern und Regionen zu dokumentieren und analysieren.\footnote{Vgl. \cite{}, S. 549.}
+In einem umfassenden Literaturreview identifizierten sie 18 Erfolgsfaktoren mit über 80 Unterfaktoren.\footnote{Vgl. \cite{}, S. 548.}
+Im weiteren Verlauf ihrer Studie ordnen sie die gefundenen Erfolgsfaktoren den folgenden drei Gruppen zu:\footnote{Vgl. zu dieser Liste \cite{}, S. 560.}
 \begin{itemize}\itemsep0pt
-\item[-]
-\item[-]
+\item[-]Länderbezogene Faktoren,
+\item[-]Anbieterbezogene Faktoren,
+\item[-]Organisationsbezogene Faktoren.
 \end{itemize}
-
 \textit{Begründung:}\\\noindent
+Ngai, Law und Wat führen an, dass die Erfolgsfaktoren, die sie in ihrer Studie herausgearbeitet haben, als Checkliste genutzt werden können, welche alle möglichen Erfolgsfaktoren, die in Verbindung mit ERP Implementierung in verschiedenen Ländern stehen, abdeckt.\footnote{Vgl. zu diesem Satz und dem Rest des Absatzes \cite{}, S. 561.}
+Ihr Rahmenkonzept liefert nicht nur eine umfassende Reihe von Erfolgsfaktoren, sondern hebt auch die Beziehungen hervor, die wahrscheinlich zwischen den länderbezogenen, anbieterbezogenen und organisationsbezogenen Erfolgsfaktoren. Dies lenkt, so Ngai, Law und Wat, die Aufmerksamkeit der akademischen Forscher auf die Notwendigkeit, Einflüsse, die außerhalb von ERP verwendenden Unternehmen entstehen, in relevanten Studien zu berücksichtigen.
