--- a/kapitel/arten/rockart1979.tex
+++ b/kapitel/arten/rockart1979.tex
@@ -1,13 +1,37 @@
 \noindent
 \subsubsection{Klassifizierung nach Rockart (1979)}
 \textit{Vorgehehen:}\\\noindent
-Rockart nimmt in seiner Studie eine Unterteilung von Erfolgsfaktoren\todo{welche Projekte etc} in folgende Gruppen vor:\footnote{Vgl. zu dieser Liste \cite{Rockart.1979}, S. 92.}
+Rockart betrachtet in seinem Aufsatz maßgeblich die "critical success factor method" (Er\-folgs\-fak\-tor-\-Me\-tho\-de), die von einem Forscherteam des \ac{MIT} entwickelt wurde.\footnote{Vgl. zu diesem Teilsatz \cite{Rockart.1979}, S. 82.} Anschließend nimmt er seinerseits eine Unterteilung der  
+hier herausgearbeiteten Erfolgsfaktoren von \ISPS in zwei Kategorien vor:\footnote{Vgl. zu der folgenden Liste \cite{Rockart.1979}, S. 92.}
 \begin{itemize}\itemsep0pt
 \item[-]Faktoren bezüglich der Kontrolle,
-\item[-]Faktoren bezüglich der Erstellung.
+\item[-]Faktoren bezüglich der Entwicklung.
 \end{itemize}
+Darüber hinaus zitiert Rockart das MIT-Team bezüglich der folgenden vier Quellen von Erfolgsfaktoren:\footnote{Vgl. zu diesem Satz und der folgenden Liste \cite{Rockart.1979}, S. 86.}
+\begin{itemize}\itemsep0pt
+\item[-]Struktur der jeweiligen Branche,
+\item[-]Wettbewerbsstrategie, Position innerhalb der Branche und geographische Lage,
+\item[-]externe Einflüsse,
+\item[-]zeitliche Rahmenbedingungen.
+\end{itemize} 
+Diese Quellen können, laut Rockart, die Relevanz der einzelnen \EF für die jeweiligen Unternehmen selektiv beeinflussen.\footnote{Vgl. zu diesem Satz \cite{Rockart.1979}, S. 86, 87.}
+Je höher beispielsweise der aktuelle Wettbewerbsdruck für ein Unternehmen ist, desto mehr tendiert es dazu, \EF bezüglich der Kontrolle zu 
+priorisieren.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Rockart.1979}, S. 92.}
+Je stärker jedoch ein Unternehmen zum Beispiel durch staatliche Vorgaben oder Dezentralisierung isoliert ist, desto mehr fokussiert es auf die zukunftsorientierte 
+Entwicklung, die auf eine Anpassung an eine neue Umgebung ausgerichtet ist. Rockart geht schließlich noch einen Schritt weiter und stellt heraus, 
+dass \EF zusätzlich nicht nur zwischen Unternehmen, sondern selbst von Manager zu Manager voneinander abweichen können.\footnote{Vgl. \cite{Rockart.1979}, S. 86.} 
+\\\noindent
 \textit{Begründung:}\\\noindent
-Rockart liefert keine explizite Begründung für seinen Ansatz, geht jedoch in seinem gesamten Artikel auf die
-generelle Relevanz von Erfolgsfaktoren ein. 
-Hierzu führt er an, dass z.B. die Identifikation von Erfolgsfaktoren eine präzisere Einschätzung
-des Umfangs der zu beschaffenden Informationen ermöglicht und somit eine teure Mehraquise einschränkt.\footnote{Vgl. \cite{Rockart.1979}, S. 87.}
+Rockart liefert keine explizite Begründung für seine Kategorisierung, geht jedoch in seinem gesamten Artikel auf die
+generelle Relevanz von Erfolgsfaktoren ein. Hierzu führt er an, dass z.B. die Identifikation von Erfolgsfaktoren eine präzisere Einschätzung des Umfangs der zu 
+beschaffenden Informationen ermöglicht und somit eine teure Mehraquise einschränkt.\footnote{Vgl. \cite{Rockart.1979}, S. 87.} Außerdem betont er die 
+Vorteile der von ihm betrachteten Erfolgsfaktor-Methode. Diese baut auf jeweils zwei bis drei Interviews mit Führungskräften aus verschiedenen Unternehmen auf:\footnote{Vgl. zu diesem Abschnitt \cite{Rockart.1979}, S. 84.}
+\\\noindent 
+Im ersten Interview wurden die Ziele der Interviewten erfasst und die dafür maßgeblichen \EF herausgearbeitet. 
+Weiter wurden die Beziehungen zwischen den Faktoren und Zielen beleuchtet und einzelne \EF hinzugefügt, kombiniert oder eliminiert.
+Im zweiten Interview wurden die \EF weiter zusammengefasst und präzisiert. Ein drittes Interview zur endgültigen Abrundung der Liste wurde nach 
+Bedarf vereinbart.
+\\\noindent
+Die Vorteile dieses Vorgehens, und des daraus resultierenden Schemas, liegen laut Rockart in der Berücksichtigung von subjektiv und über die Zeit variierenden 
+Ansprüchen der Manager an den Informationsgehalt des Modells.\footnote{Vgl. zu diesem und dem nächsten Satz \cite{Rockart.1979}, S. 84.} Ferner dient der Ansatz
+dazu, die Führungskräfte zeiteffizient bei der Ermittlung ihres wesentlichen Informationsbedarfes zu unterstützen.
