--- a/kapitel/arten/slevin_pinto1987.tex
+++ b/kapitel/arten/slevin_pinto1987.tex
@@ -1,12 +1,12 @@
 \noindent
 \subsubsection{Klassifizierung nach Slevin und Pinto (1987)}
 \textit{Vorgehen:}\\\noindent
-SLevin und Pinto beziehen sich in ihrer Studie auf Erfolgsfaktoren im allgemeinen Projektmanagement.
-Slevin und Pinto liefern eine Liste von zehn Erfolgsfaktoren für die erfolgreiche Implementierung
+Slevin und Pinto beziehen sich in ihrer Studie auf Erfolgsfaktoren im allgemeinen Projektmanagement.
+Sie erstellen eine Liste von zehn Erfolgsfaktoren für die erfolgreiche Implementierung
 von Projekten, welche sie zunächst zwei verschiedenen Projektphasen zuordnen.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Slevin.1987}, S. 3.} 
 Die Faktoren \textit{Projektrichtung}, \textit{Top-Management-Unterstützung} und \textit{Zeitplan} teilen sie in die Planungsphase eines Projektes ein. 
 Die restlichen sieben \EF,wie zum Beispiel Kundenkonsultation, technische Aufgaben oder Akzeptanz des 
-Kunden,\footnote{Vgl. zu den Erfolgsfaktoren \cite{Slvein.1987}, S. 2.} ordnen die Autoren der Implementierungs - 
+Kunden,\footnote{Vgl. zu den Erfolgsfaktoren \cite{Slevin.1987}, S. 2.} ordnen die Autoren der Implementierungs - 
 bzw. Aktionsphase zu.\\\noindent
 Alle \EF klassifizieren sie schließlich in:\footnote{Vgl. zu dieser Liste \cite{Slevin.1987}, S. 3.}
 \begin{itemize}\itemsep0pt
